Fixed: restructured to fix sizing issue of votearrows and removed component-level spacing (to force spacing concerns on the context).

--- a/src/_votearrows.css
+++ b/src/_votearrows.css
@@ -4,37 +4,34 @@ Vote Arrows
 =============================================================================== 
 */
 .athing a:has(.votearrow) {
-
+    
     .votearrow {
-        margin-right: 16px;
-        background: none;
+        --size: 24px;
+
+        background: var(--votearrow-background-color);
+        border: solid var(--votearrow-border-size) var(--votearrow-border-color);
+        border-radius: 3px;
+        color: var(--votearrow-arrow-color);
+        height: var(--size);
+        margin: 0;
+        transition: all 0.3s;
+        width: var(--size);
 
         &::before {
-            position: relative;
-            top: -1px;
-            left: -5px;
-        
-            background: var(--votearrow-background-color);
-            border: solid var(--votearrow-border-size) var(--votearrow-border-color);
             box-sizing: border-box;
             content: '▴';
-            color: var(--votearrow-arrow-color);
             display: inline-block;
             font-family: sans-serif;
-            font-size: 36px;
+            font-size: calc(1.25 * var(--size));
+            height: 100%;
             line-height: 0.4;
-            height: 28px;
-            width: 28px;
-            padding: 7px 0 0;
+            padding: calc(0.25 * var(--size)) 0 0;
             text-align: center;
-            border-radius: 3px;
-            transform: scale(0.8);
-            transition: all 0.3s;
+            width: 100%;
         }
     }
 
-
-    &:hover .votearrow::before {
+    &:hover .votearrow {
         color: var(--votearrow-arrow-color-hover);
         background: var(--votearrow-background-color-hover);
         border-color: var(--votearrow-border-color-hover);
